# anibridge-trakt-provider

./: README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
src/anibridge/providers/list/trakt/: __init__.py  client.py  config.py  list.py  models.py  testing.py
src/anibridge/providers/trakt/: __init__.py  client.py  config.py  models.py  provider.py
tests/: conftest.py  test_client.py  test_list.py  test_models.py  test_provider.py
