[project]
name = "anibridge-trakt-provider"
version = "0.2.0"
description = "Trakt provider for the AniBridge project."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = ["anibridge", "trakt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.13.3",
    "anibridge-provider-base>=0.1.0a2",
    "anibridge-utils>=0.2.0",
    "msgspec>=0.21.1",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "F",
    "FURB",
    "G",
    "I",
    "N",
    "PERF",
    "PLC",
    "PLE",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --import-mode=importlib"
asyncio_mode = "auto"

[tool.uv]
python-preference = "only-managed"

[tool.uv.build-backend]
module-name = "anibridge"
namespace = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.22",
]
